# headless-dxf2gcode

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.yaml  end.example.gcode  headless-dxf2gcode.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
headless_dxf2gcode/: __init__.py  config.yaml  main.py  start.example.gcode
