[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headless-dxf2gcode"
version = "1.0.0"
description = "Headless DXF to G-code converter with intelligent optimizations"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Jakub Holoubek", email = "jakub.holoubek@gmail.com"}
]
maintainers = [
    {name = "Jakub Holoubek", email = "jakub.holoubek@gmail.com"}
]
keywords = ["dxf", "gcode", "cnc", "machining", "optimization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "ezdxf>=1.0.0",
    "shapely>=2.0.0",
    "PyYAML>=6.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/holoujak/headless-dxf2gcode"
Repository = "https://github.com/holoujak/headless-dxf2gcode"
Issues = "https://github.com/holoujak/headless-dxf2gcode/issues"
Documentation = "https://github.com/holoujak/headless-dxf2gcode/blob/master/README.md"

[project.scripts]
headless-dxf2gcode = "headless_dxf2gcode.main:main"

[tool.setuptools]
packages = ["headless_dxf2gcode"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
headless_dxf2gcode = ["*.yaml", "*.gcode"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["headless_dxf2gcode"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=headless_dxf2gcode --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
